Sun Sep  2 21:41:21 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkkeys-x11.c (update_keymaps): Set current serial
	so that we don't eternally update the keymap after we
	get a change notification.

	* gtk/gtkmenuitem.c (gtk_menu_item_set_right_justified): Fix
	incorrect cast.

Sun Sep  2 23:27:16 2001  Kristian Rietveld  <kristian@planet.nl>

	* gtk/gtktreemodelsort.[ch]: much changes in an attempt to make
	it working. It mostly works now, although there're still a few issues
	to be worked out.

	* tests/testtreesort.c (main): changes to have a better test
	application for the GtkTreeModelSort.

Sun Sep  2 23:19:07 2001  Kristian Rietveld  <kristian@planet.nl>

	* gtk/gtktreeview.c (gtk_tree_view_search_iter): code cleaup,
	fix for bug #59222.

	* gtk/gtktreeview.c (gtk_tree_view_search_equal_func): add
	gpointer search_data argument to function definition and
	prototype, to match GtkTreeViewSearchEqualFunc typedef.

Sat Sep  1 21:57:27 2001  Kristian Rietveld  <kristian@planet.nl>

	* gtk/gtkrbtree.c (_gtk_rbtree_reorder): add warnings
	per jrb's request.

Fri Aug 31 20:01:23 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_search_iter): pass in user data.

	* gtk/gtktreeview.c (gtk_tree_view_destroy): destroy search_data.

Wed Aug 29 20:40:58 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextbuffer.[ch] (gtk_text_buffer_add/remove_selection_clipboard): 
	Instead of always mirroring the selection to a single PRIMARY
	selection, allow it to be mirrored to any number of clipboards.

	* gtk/gtktextbuffer.[ch] (gtk_text_buffer_paste_primary): Remove, 
	just use gtk_text_buffer_paste_clipboard with the appropriate clipboard.

	* gtk/gtktextbuffer.[ch] (gtk_text_buffer_cut/copy/paste_clipboard): Add a
	GtkClipboard argument, and for paste_clipboard, the
	@override_location argument from @paste_primary.

	* gtk/gtktextview.c: Adapt to above change.
	
2001-08-30  Havoc Pennington  <hp@redhat.com>
